[package]
name = "pino"
version = "0.1.0"
edition = "2021"
authors = ["Miłosz Osadczuk"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.70"
once_cell = "*"
console_error_panic_hook = "0.1.7"


[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
version = "0.3.70"